<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="@dimen/post_user_text_size"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar,menu" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.5"
            android:paddingTop="@dimen/common_spacing"
            android:paddingBottom="@dimen/small_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrLayoutDateAndSpeakers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/small_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/event_date"
            android:textColor="@color/coordinates_text_color"
            app:layout_constraintBottom_toTopOf="@id/timeLabel"
            app:layout_constraintEnd_toStartOf="@+id/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.google.android.material.textview.MaterialTextView>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            app:layout_constraintBottom_toTopOf="@id/timeLabel"
            app:layout_constraintEnd_toStartOf="@+id/speakers"
            app:layout_constraintStart_toEndOf="@+id/dateLabel"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@sample/posts.json/data/published">
        </com.google.android.material.textview.MaterialTextView>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_spacing"
            android:text="@string/event_time"
            android:textColor="@color/coordinates_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel">
        </com.google.android.material.textview.MaterialTextView>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/speakers"
            app:layout_constraintStart_toEndOf="@+id/timeLabel"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel"
            tools:text="@sample/posts.json/data/published">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speakers"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_post_like"
            app:icon="@drawable/ic_baseline_spatial_audio_off_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@sample/posts.json/data/likes" />
    </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constrLayoutDateAndSpeakers"
                tools:text="@sample/posts.json/data/link" />
            />

        <LinearLayout
            android:id="@+id/coordsLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link">

            <ImageView
                android:layout_width="@dimen/common_spacing"
                android:layout_height="@dimen/common_spacing"
                android:layout_marginVertical="@dimen/small_spacing"
                android:layout_marginRight="@dimen/small_spacing"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />
            <TextView
                android:id="@+id/coords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:textSize="@dimen/coords_text_size"
                android:paddingVertical="@dimen/small_spacing"
                android:textColor="@color/coordinates_text_color"
                android:autoLink="web"
                android:ellipsize="end"
                tools:text="@sample/posts.json/data/coords"  />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrLayoutAttachment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coordsLine">

            <ImageView
                android:id="@+id/attachment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="constrLayoutAttachment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            app:icon="@drawable/selector_like"
            app:iconTint="@color/like_checkbox_tint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:checked="@sample/posts.json/data/likedByMe"
            tools:text="@sample/posts.json/data/likes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/participate"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            app:icon="@drawable/selector_participation"
            app:iconTint="@color/like_checkbox_tint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:checked="@sample/posts.json/data/participatedByMe"
            tools:text="@sample/posts.json/data/likes" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>