<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:padding="1dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/jobname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/smaller_spacing"
                android:paddingTop="14dp"
                android:paddingEnd="@dimen/small_spacing"
                android:text="@string/name"
                android:textAlignment="textEnd" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/jobname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/smaller_spacing"
                android:paddingTop="12dp"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:text="@sample/posts.json/data/content" />
        </TableRow>

        <TableRow android:padding="1dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/position_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/smaller_spacing"
                android:paddingTop="4dp"
                android:paddingEnd="@dimen/small_spacing"
                android:text="@string/position"
                android:textAlignment="textEnd" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:paddingLeft="@dimen/smaller_spacing"
                android:paddingTop="4dp"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:text="@sample/posts.json/data/author" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/description_job_menu"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab"
        android:paddingHorizontal="@dimen/common_spacing"
        android:paddingVertical="@dimen/smaller_spacing">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/small_spacing"
            android:text=" - "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintLeft_toRightOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/tab"
            tools:text="@sample/posts.json/data/published" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_weight="1"
        android:ellipsize="end"
        android:autoLink="web"
        android:paddingHorizontal="@dimen/common_spacing"
        android:paddingBottom="@dimen/small_spacing"
        android:textAppearance="?attr/textAppearanceListItem"
        tools:text="@sample/posts.json/data/link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/period" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link" />
<!--    <View-->
<!--        android:id="@+id/divider"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginStart="@dimen/common_spacing"-->
<!--        android:layout_marginTop="@dimen/common_spacing"-->
<!--        android:layout_marginEnd="@dimen/common_spacing"-->
<!--        android:background="@color/divider_color"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/link" />-->
</androidx.constraintlayout.widget.ConstraintLayout>